--- a/html/form.html
+++ b/html/form.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Data Input Form</title>
+    <title>My Form</title>
 </head>
 <body>
-    <h1>Data Input Form</h1>
+    <h2>My Form</h2>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
